--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h1>Hello world, I am 2702445 <h1>
-<ahref="https://github.com/laurenlach/sample-code/blob/main/2702445-lab2.html">2702445-lab2</a>
+<a href="2702445-lab2.html">2702445-lab2</a>
 
 </body>
 </html>
